# pylondrina

./: .gitignore  README.md  __init__.py  datasets.py  errors.py  fixing.py  importing.py  importing_traces.py  io.py  pyproject.toml  reports.py  schema.py  types.py  validation.py  validation_traces.py
data/ADATRAP/: DIC_777_fixed.csv  domains.yaml  stage_layout.yaml
data/EOD_STGO/: DistanciaViaje.csv  Edadpersonas.csv  Hogares.csv  Vehiculo.csv  ViajesDifusion.csv
data/Foursquare/: categories.yaml  foursquare_groups.yaml
data/flows/: viewer_registry.json
data/synthetic/: datetime_partial_1200.csv  demo_op02_clean.csv  dummy_dataset.csv  happy_path_minimal_1200.csv  large_correspondence_1200.csv  selection_output_1200.csv  test_dataset.csv  tripdataset_real_canonical.csv
experiments/persistence_formats/: generate_case.py  run_matrix.py  run_one.py
export/: __init__.py  flowmap_blue.py  flows.py
inference/: __init__.py  trips_from_traces.py
io/: __init__.py  flows.py  trips.py
issues/: __init__.py  catalog_import_trips.py  core.py
notebooks/demo/: awto_traces.ipynb  scooters_trips.ipynb  telefonia_traces.ipynb
queries/: __init__.py  flows.py
scripts/: generate_viewer_registry.py  smoke_imports.py  test_function.py
sources/: __init__.py  builtins.py  factories.py  helpers.py  profile.py  registry.py
transforms/: __init__.py  cleaning.py  concat.py  enrich.py  filtering.py  flows.py  flows_filtering.py  inference.py  traces.py
viewer/: index.html
viewer_src/: README.md  index.html  main.js  package.json  vite.config.js
(+444 files in other folders)
